# DeviceManager_ADS_Samples

./: .gitignore  CMakeLists.txt
Areas/: cpu.cpp
Examples/: get_cpu_info.cpp
PyModule/: CMakeLists.txt  PyDbgNt.pyproj  debug.cpp  devicemanager.cpp  gdb.sh  init.bat  init.sh  main.py  setup.py
PyModule/tests/: get_attr.h  test_cpu.h
PyModule/types/: cpu.cpp  cpu.h  py_cpu.cpp  py_cpu.h  py_fso.cpp  py_fso.h  py_miscellaneous.h  py_slot_templates.h  py_twincat.cpp  py_twincat.h
